--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import "./App.css";
+@import "./styles/Header.css";
+@import "./styles/Footer.css";
+@import "./styles/Main.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  position: relative;
 }
 
 code {
