--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
+@import '~antd/dist/antd.css';
 @import "./App.css";
-@import "./styles/Header.css";
-@import "./styles/Footer.css";
-@import "./styles/Main.css";
+
 
 body {
   margin: 0;
