--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import '~antd/dist/antd.css';
 @import "./App.css";
 @import "./styles/Header.css";
 @import "./styles/Footer.css";
 @import "./styles/Main.css";
+@import "./styles/NavBarSearch.css";
+@import "./styles/Map.css";
 
 body {
   margin: 0;
