--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 @import '~antd/dist/antd.css';
 @import "./App.css";
 @import "./styles/Header.css";
-@import "./styles/Footer.css";
 @import "./styles/Main.css";
-@import "./styles/NavBarSearch.css";
-@import "./styles/Map.css";
+@import "./styles/MapContainer.css";
 
 body {
   margin: 0;
