--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,7 @@
-.App-header {
-    display: flex;
-    align-items: center;
-    height: 70px;
-    width: 100%;
-    color: #1f6099;
-    box-shadow: rgb(220, 220, 220) 0px 2px 10px;
+.ant-row {
+  flex-flow: nowrap;
+  height: 90px;
+  background-color:rgba(78, 174, 253, 0.2);
 }
 
 .title {
