add filter features

--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -26,8 +26,8 @@
 }
 
 .tableContainer {
-    margin-left: 10px;
-    max-width: 435px;
+    padding-left:20px;
+    max-width: 440px;
 }
 
 .right-side {
