--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -34,5 +34,19 @@
     margin-left: 10px;
 }
 
+.search-route {
+    float: right;
+    margin-right: 15px;
+    /* background-color: #4188E8 !important; */
+    color: #fff;
+    min-width: 60px !important;
+    min-height: 60px !important;
+    
+}
+
+button.search-route{
+    background: transparent;
+}
+
 
 
