--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -13,6 +13,7 @@
 
 .left-side {
     padding-top: 10px;
+    width: 50%;
 }
 
 .left-side img {
@@ -53,5 +54,9 @@ button.ant-btn-lg{
     height: 75px !important;
 }
 
-
-
+.travelScheduleContainer {
+    font-size: 14px;
+    padding: 10px;
+    margin-left: 10px;
+    width: 50%;
+}
