--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -32,15 +32,17 @@
     padding-top: 10px;
 }
 
-.recommend-button{
+.recommend-div{
     margin-left: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    padding-top: 15px;
     height: 50px;
     font-size: 15px;
     font-weight: bold;
     background-color: #4188E8;
     width: 600px;
+    color: #fff;
 }
 
 .backwardButton{
@@ -49,6 +51,17 @@
     margin-left: 20px;
     font-size: 15px;
     font-weight: bold;
+}
+
+.ant-modal-body{
+    padding-left: 30px;
+    padding-top: 12px;
+}
+
+.ant-typography{
+    margin-left: 4px;
+    margin-right: 4px;
+    color:#FFD700;
 }
 
 .right-side {
