--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -9,6 +9,7 @@
 
 .container {
   padding: 1em;
+  text-align: left;
 }
 .container img{
   width: 100%;
@@ -54,9 +55,13 @@
 
 .backwardButton{
   background-color: #4188E8;
-  font-size: 15px;
+  font-size:1em;
   font-weight: bold;
   border-radius: 10px;
+  padding: .3em 1em;
+  width: 13em;
+  margin-left: .5em;
+
 }
 
 .ant-modal-body{
@@ -115,6 +120,7 @@ button.ant-btn-lg{
 .jsj button{
   margin: .5em 0;
   margin-left:.6em;
+  width: 8em;
 }
 
 .ant-modal-title{
