--- a/src/styles/SavedPlanList.css
+++ b/src/styles/SavedPlanList.css
@@ -1,27 +1,41 @@
+.searchResult-container {
+    text-align: center;
+    min-height: 100vh;
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 5px;
+}
+
+.main {
+    display: flex;
+}
+
 .left-side {
     padding-top: 10px;
     width: 50%;
 }
 
 .tableContainer {
-    padding-left:20px;
-    max-width: 600px;
-    padding-top: 10px;
+    max-width: 100%;
 }
 
 .right-side {
     margin-left: 10px;
 }
 
-.backwardButton{
-    float: left;
-    background-color: #4188E8;
-    margin-left: 20px;
-    font-size: 15px;
-    font-weight: bold;
-}
-
 .ant-modal-body{
     padding-left: 30px;
     padding-top: 12px;
+}
+
+.jsj button{
+    margin: .5em 0;
+    margin-left:.6em;
+    width: 8em;
+  }
+  
+.ant-modal-title{
+    margin-left: 1em;
+    margin-top: 0.5em;
 }
