--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -38,8 +38,6 @@
   line-height: 1;
 } 
 
-
-
 .recommend-div{
     height: 50px;
     font-size: 1em;
@@ -54,9 +52,13 @@
 
 .backwardButton{
   background-color: #4188E8;
-  font-size: 15px;
+  font-size: 1em;
   font-weight: bold;
   border-radius: 10px;
+  float: left;
+  padding: .3em 1em;
+  width: 13em;
+  margin-left: .5em;
 }
 
 .ant-modal-body{
@@ -115,6 +117,7 @@ button.ant-btn-lg{
 .jsj button{
   margin: .5em 0;
   margin-left:.6em;
+  width: 8em;
 }
 
 .ant-modal-title{
