--- a/src/styles/SearchResultHeader.css
+++ b/src/styles/SearchResultHeader.css
@@ -1,6 +1,5 @@
 .searchResult-container .ant-row {
     flex-flow: nowrap;
-    height: 90px;
     background-color:rgb(220, 234, 248);
 }
 
@@ -51,3 +50,31 @@
     width:5em;
     margin: 1em 0;
 }
+
+.humIcon{
+  border-right: .2px solid #d2d2d2;
+  padding-right: 1em !important;
+}
+
+.header-col{
+  display: flex;
+}
+
+.backSearch img{
+  width:1.3em;
+  margin-right: .8em;
+}
+
+.backSearch{
+  display: flex;
+  line-height:6;
+}
+
+.backSearch p{
+  color:#353535;
+  font-weight: 600;
+  font-size: 1.1em;
+  line-height: 5.6;
+}
+
+
